--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2250,7 +2250,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #000907;
-				background-image: url("../../images/banner.jpg");
+				background-image: url("../../images/black.jpg");
 			}
 
 			#main > section.two {
