--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2258,11 +2258,11 @@ input, select, textarea {
 			}
 
 			#main > section.three {
-				background-color: #ecf1f1;
+				background-color: #000808;
 			}
 
 			#main > section.four {
-				background-color: #e8edec;
+				background-color: #000605;
 			}
 
 /* Wide */
