--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,6 +137,9 @@ input, select, textarea {
 			h2.alt strong {
 				color: #050404;
 			}
+               h2.alt1{
+		       color:rgb(255, 255, 255);
+	       }
 
 	h3 {
 		font-size: 1.5em;
