--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,11 +131,11 @@ input, select, textarea {
 	}
 
 		h2.alt {
-			color: #040404;
+			color: #f9f5f5;
 		}
 
 			h2.alt strong {
-				color: #050404;
+				color: #f9f6f6;
 			}
                h2.alt1{
 		       color:rgb(255, 255, 255);
