--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,7 +138,7 @@ input, select, textarea {
 				color: #f9f6f6;
 			}
                h2.alt1{
-		       color:rgb(255, 255, 255);
+		       color:#FFFFFF;
 	       }
 
 	h3 {
