--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,7 +124,9 @@ input, select, textarea {
 		h1 a strong, h2 a strong, h3 a strong, h4 a strong, h5 a strong, h6 a strong {
 			color: #333;
 		}
-
+        h3.al{
+		color: #FFFFFF;
+	}
 	h2 {
 		font-size: 2em;
 		letter-spacing: -1px;
