--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,10 +125,10 @@ input, select, textarea {
 			color: #333;
 		}
         h3.al{
-		color: #FFFFFF;
+		color: #FF0000;
 	}
 	h2 {
-		font-size: 2em;
+		font-size: 1em;
 		letter-spacing: -1px;
 	}
 
