--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,6 +142,9 @@ input, select, textarea {
                p.alt2{
 		     color:#FFFFFF;  
 	       }
+               h2.alt3{
+		     color:#FFFFFF;   
+	       }
 	h3 {
 		font-size: 1.5em;
 	}
