--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2259,7 +2259,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #000907;
-				background-image: url("../../images/black.jpg");
+				background-image: url("");
 			}
 
 			#main > section.two {
