--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,7 +129,7 @@ input, select, textarea {
 		letter-spacing: -1px;
 	}
         h2.at{
-		color:#FF0000;
+		color:#FFFFFF;
 	}
 		h2.alt {
 			color:#FFFFFF;
