--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,26 +129,26 @@ input, select, textarea {
 		letter-spacing: -1px;
 	}
         h2.at{
-		color:#FFFFFF;
+		color: #FFFFFF;
 	}
 		h2.alt {
-		     color:#FFFFFF;
+		     color: #FFFFFF;
 		}
 
 			h2.alt strong {
-				color:#FFFFFF;
+				color: #FFFFFF;
 			}
                h2.alt1{
-		       color:#FFFFFF;
+		       color: #FFFFFF;
 	       }
                p.alt2{
-		     color:#FFFFFF;  
+		     color: #FFFFFF;  
 	       }
                h2.alt3{
-		     color:#FFFFFF;   
+		     color: #FFFFFF;   
 	       }
               h2.alt4{
-		    color:#FFFFFF; 
+		    color: #FFFFFF; 
 	      }
 	h3 {
 		font-size: 1.5em;
@@ -2191,7 +2191,7 @@ input, select, textarea {
 	#footer {
 		margin-left: 375px;
 		text-align: center;
-		background-color: #010f0d;
+		background-color: #000605;
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
